--- a/MyLocationApp/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/MyLocationApp/app/src/main/res/layout/fragment_bluetooth.xml
@@ -3,12 +3,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.mahisoft.mylocationapp.BluetoothFragment">
 
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text= " "/>
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start"
         android:onClick="onButtonPressed"
-        android:layout_gravity="center" />
+        android:layout_gravity="right|bottom" />
 
 </FrameLayout>
