--- a/MyLocationApp/app/src/main/res/layout/fragment_map.xml
+++ b/MyLocationApp/app/src/main/res/layout/fragment_map.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mahisoft.mylocationapp.MapFragment">
+    tools:context="com.example.mahisoft.mylocationapp.GPSFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
