--- a/MyLocationApp/app/src/main/res/layout/fragment_map.xml
+++ b/MyLocationApp/app/src/main/res/layout/fragment_map.xml
@@ -3,8 +3,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.mahisoft.mylocationapp.MapFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text= " "/>
 
 </FrameLayout>
